# SEM1D

./: CMakeLists.txt  LICENSE  README.md  compute_forcemat.draft  compute_forcemat.f90  connectivity_matrix.f90  create1Dmodel_files  create1Dmodel_files.f90  draft.f90  gll.f90  gll_library.f90  lagrangep.f90  lagrangeprime.f90  legendrep.f90  main.f90  mapmodel.f90  parameters.in  read_sim_parameters.f90  readmodelfiles1D.f90  ricker.f90  shapefunc.f90  test.f90
